update paper bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,237 @@
----
----
+%% This BibTeX bibliography file was created using BibDesk.
+%% https://bibdesk.sourceforge.io/
+
+%% Created for TL at 2023-10-06 15:16:09 +0100 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
+@article{mcewen2023,
+	abstract = {{Proximal nested sampling was introduced recently to open up Bayesian model selection for high-dimensional problems such as computational imaging. The framework is suitable for models with a log-convex likelihood, which are ubiquitous in the imaging sciences. The purpose of this article is two-fold. First, we review proximal nested sampling in a pedagogical manner in an attempt to elucidate the framework for physical scientists. Second, we show how proximal nested sampling can be extended in an empirical Bayes setting to support data-driven priors, such as deep neural networks learned from training data.}},
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230700056M},
+	archiveprefix = {arXiv},
+	author = {{McEwen}, Jason D. and {Liaudat}, Tob{\'\i}as I. and {Price}, Matthew A. and {Cai}, Xiaohao and {Pereyra}, Marcelo},
+	date-added = {2023-10-06 15:12:01 +0100},
+	date-modified = {2023-10-06 15:12:15 +0100},
+	doi = {10.48550/arXiv.2307.00056},
+	eid = {arXiv:2307.00056},
+	eprint = {2307.00056},
+	archiveprefix = {arXiv},
+ 	arxiv = {2307.00056},
+	bibtex_show = {true},
+	code = {https://github.com/astro-informatics/proxnest},
+	journal = {arXiv e-prints},
+	keywords = {Statistics - Methodology, Astrophysics - Instrumentation and Methods for Astrophysics, Statistics - Machine Learning},
+	month = jun,
+	pages = {arXiv:2307.00056},
+	primaryclass = {stat.ME},
+	title = {{Proximal nested sampling with data-driven priors for physical scientists}},
+	year = 2023,
+	bdsk-url-1 = {https://doi.org/10.48550/arXiv.2307.00056}}
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
-}
+@article{liaudat2023_2,
+	abstract = {{The accurate modelling of the Point Spread Function (PSF) is of paramount importance in astronomical observations, as it allows for the correction of distortions and blurring caused by the telescope and atmosphere. PSF modelling is crucial for accurately measuring celestial objects' properties. The last decades brought us a steady increase in the power and complexity of astronomical telescopes and instruments. Upcoming galaxy surveys like Euclid and LSST will observe an unprecedented amount and quality of data. Modelling the PSF for these new facilities and surveys requires novel modelling techniques that can cope with the ever-tightening error requirements. The purpose of this review is three-fold. First, we introduce the optical background required for a more physically-motivated PSF modelling and propose an observational model that can be reused for future developments. Second, we provide an overview of the different physical contributors of the PSF, including the optic- and detector-level contributors and the atmosphere. We expect that the overview will help better understand the modelled effects. Third, we discuss the different methods for PSF modelling from the parametric and non-parametric families for ground- and space-based telescopes, with their advantages and limitations. Validation methods for PSF models are then addressed, with several metrics related to weak lensing studies discussed in detail. Finally, we explore current challenges and future directions in PSF modelling for astronomical telescopes.}},
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230607996L},
+	archiveprefix = {arXiv},
+	author = {{Liaudat}, Tobias and {Starck}, Jean-Luc and {Kilbinger}, Martin},
+	arxiv = {2306.07996},
+	bibtex_show = {true},
+	date-added = {2023-10-06 15:12:01 +0100},
+	date-modified = {2023-10-06 15:12:25 +0100},
+	doi = {10.48550/arXiv.2306.07996},
+	eid = {arXiv:2306.07996},
+	eprint = {2306.07996},
+	journal = {arXiv e-prints},
+	keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics, Computer Science - Computer Vision and Pattern Recognition},
+	month = jun,
+	pages = {arXiv:2306.07996},
+	primaryclass = {astro-ph.IM},
+	title = {{Point spread function modelling for astronomical telescopes: a review focused on weak gravitational lensing studies}},
+	year = 2023,
+	bdsk-url-1 = {https://doi.org/10.48550/arXiv.2306.07996}}
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
+@article{farrens2022,
+	abstract = {{We present the first public release of ShapePipe, an open-source and modular weak-lensing measurement, analysis, and validation pipeline written in Python. We describe the design of the software and justify the choices made. We provide a brief description of all the modules currently available and summarise how the pipeline has been applied to real Ultraviolet Near-Infrared Optical Northern Survey data. Finally, we mention plans for future applications and development. The code and accompanying documentation are publicly available on GitHub.}},
+	author = {{Farrens, S.} and {Guinot, A.} and {Kilbinger, M.} and {Liaudat, T.} and {Baumont, L.} and {Jimenez, X.} and {Peel, A.} and {Pujol, A.} and {Schmitz, M.} and {Starck, J.-L.} and {Vitorelli, A. Z.}},
+	date-added = {2023-10-06 15:12:01 +0100},
+	date-modified = {2023-10-06 15:12:51 +0100},
+	doi = {10.1051/0004-6361/202243970},
+	journal = {A\&A},
+	pages = {A141},
+ 	arxiv = {2206.14689},
+	bibtex_show = {true},
+	code = {https://github.com/CosmoStat/shapepipe},
+	title = {ShapePipe: A modular weak-lensing processing and analysis pipeline},
+	url = {https://doi.org/10.1051/0004-6361/202243970},
+	volume = 664,
+	year = 2022,
+	bdsk-url-1 = {https://doi.org/10.1051/0004-6361/202243970}}
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
+@article{casey2023,
+	abstract = {We present the survey design, implementation, and outlook for COSMOS-Web, a 255 hr treasury program conducted by the James Webb Space Telescope in its first cycle of observations. COSMOS-Web is a contiguous 0.54 deg2 NIRCam imaging survey in four filters (F115W, F150W, F277W, and F444W) that will reach 5σ point-source depths ranging ∼27.5--28.2 mag. In parallel, we will obtain 0.19 deg2 of MIRI imaging in one filter (F770W) reaching 5σ point-source depths of ∼25.3--26.0 mag. COSMOS-Web will build on the rich heritage of multiwavelength observations and data products available in the COSMOS field. The design of COSMOS-Web is motivated by three primary science goals: (1) to discover thousands of galaxies in the Epoch of Reionization (6 ≲ z ≲ 11) and map reionization's spatial distribution, environments, and drivers on scales sufficiently large to mitigate cosmic variance, (2) to identify hundreds of rare quiescent galaxies at z &gt; 4 and place constraints on the formation of the universe's most-massive galaxies (M ⋆ &gt; 1010 M ⊙), and (3) directly measure the evolution of the stellar-mass-to-halo-mass relation using weak gravitational lensing out to z ∼ 2.5 and measure its variance with galaxies' star formation histories and morphologies. In addition, we anticipate COSMOS-Web's legacy value to reach far beyond these scientific goals, touching many other areas of astrophysics, such as the identification of the first direct collapse black hole candidates, ultracool subdwarf stars in the Galactic halo, and possibly the identification of z &gt; 10 pair-instability supernovae. In this paper we provide an overview of the survey's key measurements, specifications, goals, and prospects for new discovery.},
+	author = {Caitlin M. Casey and Jeyhan S. Kartaltepe and Nicole E. Drakos and Maximilien Franco and Santosh Harish and Louise Paquereau and Olivier Ilbert and Caitlin Rose and Isabella G. Cox and James W. Nightingale and Brant E. Robertson and John D. Silverman and Anton M. Koekemoer and Richard Massey and Henry Joy McCracken and Jason Rhodes and Hollis B. Akins and Natalie Allen and Aristeidis Amvrosiadis and Rafael C. Arango-Toro and Micaela B. Bagley and Angela Bongiorno and Peter L. Capak and Jaclyn B. Champagne and Nima Chartab and {\'O}scar A. Ch{\'a}vez Ortiz and Katherine Chworowsky and Kevin C. Cooke and Olivia R. Cooper and Behnam Darvish and Xuheng Ding and Andreas L. Faisst and Steven L. Finkelstein and Seiji Fujimoto and Fabrizio Gentile and Steven Gillman and Katriona M. L. Gould and Ghassem Gozaliasl and Christopher C. Hayward and Qiuhan He and Shoubaneh Hemmati and Michaela Hirschmann and Knud Jahnke and Shuowen Jin and Ali Ahmad Khostovan and Vasily Kokorev and Erini Lambrides and Clotilde Laigle and Rebecca L. Larson and Gene C. K. Leung and Daizhong Liu and Tobias Liaudat and Arianna S. Long and Georgios Magdis and Guillaume Mahler and Vincenzo Mainieri and Sinclaire M. Manning and Claudia Maraston and Crystal L. Martin and Jacqueline E. McCleary and Jed McKinney and Conor J. R. McPartland and Bahram Mobasher and Rohan Pattnaik and Alvio Renzini and R. Michael Rich and David B. Sanders and Zahra Sattari and Diana Scognamiglio and Nick Scoville and Kartik Sheth and Marko Shuntov and Martin Sparre and Tomoko L. Suzuki and Margherita Talia and Sune Toft and Benny Trakhtenbrot and C. Megan Urry and Francesco Valentino and Brittany N. Vanderhoof and Eleni Vardoulaki and John R. Weaver and Katherine E. Whitaker and Stephen M. Wilkins and Lilan Yang and Jorge A. Zavala},
+	date-added = {2023-10-06 15:12:01 +0100},
+	date-modified = {2023-10-06 15:12:41 +0100},
+	doi = {10.3847/1538-4357/acc2bc},
+	journal = {The Astrophysical Journal},
+	month = {aug},
+	number = {1},
+	pages = {31},
+	arxiv = {2211.07865},
+	bibtex_show = {true},
+	publisher = {The American Astronomical Society},
+	title = {COSMOS-Web: An Overview of the JWST Cosmic Origins Survey},
+	url = {https://dx.doi.org/10.3847/1538-4357/acc2bc},
+	volume = {954},
+	year = {2023},
+	bdsk-url-1 = {https://dx.doi.org/10.3847/1538-4357/acc2bc}}
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
+@article{guinot2022,
+	abstract = {{UNIONS is an ongoing collaboration that will provide the largest deep photometric survey of the Northern sky in four optical bands to date. As part of this collaboration, CFIS is taking r-band data with an average seeing of 0.65 arcsec, which is complete to magnitude 24.5 and thus ideal for weak-lensing studies. We perform the first weak-lensing analysis of CFIS r-band data over an area spanning 1700 deg2 of the sky. We create a catalogue with measured shapes for 40 million galaxies, corresponding to an effective density of 6.8 galaxies per square arcminute, and demonstrate a low level of systematic biases. This work serves as the basis for further cosmological studies using the full UNIONS survey of 4800 deg2 when completed. Here we present ShapePipe, a newly developed weak-lensing pipeline. This pipeline makes use of state-of-the-art methods such as Ngmix for accurate galaxy shape measurement. Shear calibration is performed with metacalibration. We carry out extensive validation tests on the Point Spread Function (PSF), and on the galaxy shapes. In addition, we create realistic image simulations to validate the estimated shear. We quantify the PSF model accuracy and show that the level of systematics is low as measured by the PSF residuals. Their effect on the shear two-point correlation function is sub-dominant compared to the cosmological contribution on angular scales <100 arcmin. The additive shear bias is below 5x10−4, and the residual multiplicative shear bias is at most 10−3 as measured on image simulations. Using COSEBIs we show that there are no significant B-modes present in second-order shear statistics. We present convergence maps and see clear correlations of the E-mode with known cluster positions. We measure the stacked tangential shear profile around Planck clusters at a significance higher than 4σ.}},
+	author = {{Guinot, Axel} and {Kilbinger, Martin} and {Farrens, Samuel} and {Peel, Austin} and {Pujol, Arnau} and {Schmitz, Morgan} and {Starck, Jean-Luc} and {Erben, Thomas} and {Gavazzi, Raphael} and {Gwyn, Stephen} and {Hudson, Michael J.} and {Hildebrandt, Hendrik} and {Tobias, Liaudat} and {Miller, Lance} and {Spitzer, Isaac} and {Van Waerbeke, Ludovic} and {Cuillandre, Jean-Charles} and {Fabbro, S\'ebastien} and {McConnachie, Alan} and {Mellier, Yannick}},
+	date-added = {2023-10-06 15:12:01 +0100},
+	date-modified = {2023-10-06 15:12:57 +0100},
+	doi = {10.1051/0004-6361/202141847},
+	journal = {A\&A},
+	pages = {A162},
+	arxiv = {2204.04798},
+	code = {https://github.com/CosmoStat/shapepipe},
+	bibtex_show = {true},
+	title = {ShapePipe: A new shape measurement pipeline and weak-lensing application to UNIONS/CFIS data},
+	url = {https://doi.org/10.1051/0004-6361/202141847},
+	volume = 666,
+	year = 2022,
+	bdsk-url-1 = {https://doi.org/10.1051/0004-6361/202141847}}
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
-}
+@article{kervazo2020,
+	abstract = {Sparse Blind Source Separation (sBSS) plays a key role in scientific domains as different as biomedical imaging, remote sensing or astrophysics. Such fields however require the development of increasingly faster and scalable BSS methods without sacrificing the separation performances. To that end, we introduce in this work a new distributed sparse BSS algorithm based on a mini-batch extension of the Generalized Morphological Component Analysis algorithm (GMCA). Precisely, it combines a robust projected alternated least-squares method with mini-batch optimization. The originality further lies in the use of a manifold-based aggregation of the asynchronously estimated mixing matrices. Numerical experiments are carried out on realistic spectroscopic spectra, and highlight the ability of the proposed distributed GMCA (dGMCA) to provide very good separation results even when very small mini-batches are used. Quite unexpectedly, the algorithm can further outperform the (non-distributed) state-of-the-art methods for highly sparse sources.},
+	author = {Kervazo, Christophe and Liaudat, Tobias and Bobin, J{\'e}r{\^o}me},
+	date-added = {2023-10-06 15:09:53 +0100},
+	date-modified = {2023-10-06 15:16:08 +0100},
+	doi = {https://doi.org/10.1016/j.dsp.2020.102827},
+	pdf = {https://hal.science/hal-02426991/document},
+	code = {https://github.com/jbobin/dGMCA},
+	bibtex_show = {true},
+	issn = {1051-2004},
+	journal = {Digital Signal Processing},
+	keywords = {Blind source separation, Sparse representations, Mini-batches optimization, Matrix factorization},
+	pages = {102827},
+	title = {Faster and better sparse blind source separation through mini-batch optimization},
+	url = {http://www.sciencedirect.com/science/article/pii/S105120042030172X},
+	volume = {106},
+	year = {2020},
+	bdsk-url-1 = {http://www.sciencedirect.com/science/article/pii/S105120042030172X},
+	bdsk-url-2 = {https://doi.org/10.1016/j.dsp.2020.102827}}
+
+@inproceedings{liaudat2019,
+	abstract = {{Blind Source Separation (BSS) [1] is widely used to analyze multichannel data stemming from origins as wide as astrophysics to medicine. However, existent methods do not efficiently handle very large datasets. In this work, we propose a new method coined DGMCA (Distributed Generalized Morphological Component Analysis) in which the original BSS problem is decomposed into subproblems that can be tackled in parallel, alleviating the large-scale issue. We propose to use the RCM (Riemannian Center of Mass - [6][7]) to aggregate during the iterative process the estimations yielded by the different subproblems. The approach is made robust both by a clever choice of the weights of the RCM and the adaptation of the heuristic parameter choice proposed in [4] to the parallel framework. The results obtained show that the proposed approach is able to handle large-scale problems with a linear acceleration performing at the same level as GMCA and maintaining an automatic choice of parameters.}},
+	author = {Liaudat, Tobias and Bobin, J{\'e}r{\^o}me and Kervazo, Christophe},
+	booktitle = {2019 SPARS conference proceedings},
+	date-added = {2023-10-06 15:09:53 +0100},
+	date-modified = {2023-10-06 15:09:53 +0100},
+	hal_id = {hal-02088466},
+	hal_version = {v1},
+	code = {https://github.com/tobias-liaudat/DGMCA},
+	bibtex_show = {true},
+	month = Apr,
+	pdf = {https://hal.science/hal-02088466/document},
+	title = {{Distributed sparse BSS for large-scale datasets}},
+	url = {https://hal.archives-ouvertes.fr/hal-02088466},
+	year = {2019},
+	bdsk-url-1 = {https://hal.archives-ouvertes.fr/hal-02088466}}
+
+@article{liaudat2020,
+	abstract = {{Context. Galaxy imaging surveys observe a vast number of objects, which are ultimately affected by the instrument's point spread function (PSF). It is weak lensing missions in particular that are aimed at measuring the shape of galaxies and PSF effects represent an significant source of systematic errors that must be handled appropriately. This requires a high level of accuracy at the modelling stage as well as in the estimation of the PSF at galaxy positions. Aims. The goal of this work is to estimate a PSF at galaxy positions, which is also referred to as a non-parametric PSF estimation and which starts from a set of noisy star image observations distributed over the focal plane. To accomplish this, we need our model to precisely capture the PSF field variations over the field of view and then to recover the PSF at the chosen positions. Methods. In this paper, we propose a new method, coined Multi-CCD (MCCD) PSF modelling, which simultaneously creates a PSF field model over the entirety of the instrument's focal plane. It allows us to capture global as well as local PSF features through the use of two complementary models that enforce different spatial constraints. Most existing non-parametric models build one model per charge-coupled device, which can lead to difficulties in capturing global ellipticity patterns. Results. We first tested our method on a realistic simulated dataset, comparing it with two state-of-the-art PSF modelling methods (PSFEx and RCA) and finding that our method outperforms both of them. Then we contrasted our approach with PSFEx based on real data from the Canada-France Imaging Survey, which uses the Canada-France-Hawaii Telescope. We show that our PSF model is less noisy and achieves a ~22% gain on the pixel's root mean square error with respect to PSFEx. Conclusions. We present and share the code for a new PSF modelling algorithm that models the PSF field on all the focal plane that is mature enough to handle real data.}},
+	author = {Liaudat, Tobias and Bonnin, J{\'e}r{\^o}me and Starck, Jean-Luc and Schmitz, Morgan A. and Guinot, Axel and Kilbinger, Martin and Gwyn, Stephen D. J.},
+	date-added = {2023-10-06 15:09:53 +0100},
+	date-modified = {2023-10-06 15:09:53 +0100},
+	doi = {10.1051/0004-6361/202039584},
+	journal = {A\&A},
+	pages = {A27},
+	code = {https://github.com/CosmoStat/mccd},
+	bibtex_show = {true},
+	arxiv = {2011.09835},
+	title = {{Multi-CCD modelling of the point spread function}},
+	url = {https://doi.org/10.1051/0004-6361/202039584},
+	volume = 646,
+	year = 2021,
+	bdsk-url-1 = {https://doi.org/10.1051/0004-6361/202039584}}
+
+@inproceedings{liaudat2021,
+	abstract = {We propose a paradigm shift in the data-driven modeling of the instrumental response field of telescopes. By adding a differentiable optical forward model into the modeling framework, we change the data-driven modeling space from the pixels to the wavefront. This allows to transfer a great deal of complexity from the instrumental response into the forward model while being able to adapt to the observations, remaining data-driven. Our framework allows a way forward to building powerful models that are physically motivated, interpretable, and that do not require special calibration data. We show that for a simplified setting of a space telescope, this framework represents a real performance breakthrough compared to existing data-driven approaches with reconstruction errors decreasing 5 fold at observation resolution and more than 10 fold for a 3x super-resolution. We successfully model chromatic variations of the instrument's response only using noisy broad-band in-focus observations.},
+	archiveprefix = {arXiv},
+	arxivid = {2111.12541},
+	author = {Liaudat, Tobias and Starck, Jean-Luc and Kilbinger, Martin and Frugier, Pierre-Antoine},
+	booktitle = {NeurIPS 2021 Machine Learning for Physical sciences workshop},
+	date-added = {2023-10-06 15:09:53 +0100},
+	date-modified = {2023-10-06 15:09:53 +0100},
+	eprint = {2111.12541},
+	journal = {arXiv:2111.12541},
+	code = {https://github.com/CosmoStat/wf-psf},
+	bibtex_show = {true},
+	arxiv = {2111.12541},
+	month = {nov},
+	title = {{Rethinking the modeling of the instrumental response of telescopes with a differentiable optical model}},
+	url = {http://arxiv.org/abs/2111.12541},
+	year = {2021},
+	bdsk-url-1 = {http://arxiv.org/abs/2111.12541}}
+
+@inproceedings{liaudat2021_b,
+	abstract = {{We introduce a new approach to estimate the point spread function (PSF) field of an optical telescope by building a semi-parametric model of its wavefront error. This method is particularly advantageous because it does not require calibration observa- tions to recover the wavefront error and it naturally takes into account the chromaticity of the optical system. The model is end-to-end differentiable and relies on a diffraction operator that allows us to compute monochromatic PSFs from the wavefront information.}},
+	address = {Nice, France},
+	author = {Liaudat, Tobias and Starck, Jean-Luc and Kilbinger, Martin},
+	booktitle = {{52{\`e}me Journ{\'e}es de Statistique de la Soci{\'e}t{\'e} Fran{\c c}aise de Statistique (SFdS)}},
+	date-added = {2023-10-06 15:09:53 +0100},
+	date-modified = {2023-10-06 15:09:53 +0100},
+	hal_id = {hal-03444576},
+	hal_version = {v1},
+	keywords = {Point Spread Function Modelling ; Image Processing ; Optics ; Weak Lensing},
+	month = Jun,
+	bibtex_show = {true},
+	pdf = {https://hal.archives-ouvertes.fr/hal-03444576/file/SFdS_wavefrontPSF.pdf},
+	title = {{Semi-Parametric Wavefront Modelling for the Point Spread Function}},
+	url = {https://hal.archives-ouvertes.fr/hal-03444576},
+	year = {2021},
+	bdsk-url-1 = {https://hal.archives-ouvertes.fr/hal-03444576}}
+
+@phdthesis{liaudat2022_thesis,
+	abstract = {{Gravitational lensing is the distortion of the images of distant galaxies by intervening massive objects and constitutes a powerful probe of the Large Scale Structure of our Universe. Cosmologists use weak (gravitational) lensing to study the nature of dark matter and its spatial distribution. These studies require highly accurate measurements of galaxy shapes, but the telescope's instrumental response, or point spread function (PSF), deforms our observations. This deformation can be mistaken for weak lensing effects in the galaxy images, thus being one of the primary sources of systematic error when doing weak lensing science. Therefore, estimating a reliable and accurate PSF model is crucial for the success of any weak lensing mission. The PSF field can be interpreted as a convolutional kernel that affects each of our observations of interest that varies spatially, spectrally, and temporally. The PSF model needs to cope with these variations and is constrained by specific stars in the field of view. These stars, considered point sources, provide us with degraded samples of the PSF field. The observations go through different degradations depending on the properties of the telescope, including undersampling, an integration over the instrument's passband, and additive noise. We finally build the PSF model using these degraded observations and then use the model to infer the PSF at the position of galaxies. This procedure constitutes the ill-posed inverse problem of PSF modelling. The core of this thesis has been the development of new data-driven, also known as non-parametric, PSF models. We have developed a new PSF model for ground-based telescopes, coined MCCD, which can simultaneously model the entire focal plane. Consequently, MCCD has more available stars to constrain a more complex model. The method is based on a matrix factorisation scheme, sparsity, and an alternating optimisation procedure. We have included the PSF model in a high-performance shape measurement pipeline and used it to process ~3500 deg² of r-band observations from the Canada-France Imaging Survey. A shape catalogue has been produced and will be soon released. The main goal of this thesis has been to develop a data-driven PSF model that can address the challenges raised by one of the most ambitious weak lensing missions so far, the Euclid space mission. The main difficulties related to the Euclid mission are that the observations are undersampled and integrated into a single wide passband. Therefore, it is hard to recover and model the PSF chromatic variations from such observations. Our main contribution has been a new framework for data-driven PSF modelling based on a differentiable optical forward model allowing us to build a data-driven model for the wavefront. The new model coined WaveDiff is based on a matrix factorisation scheme and Zernike polynomials. The model relies on modern gradient-based methods and automatic differentiation for optimisation, which only uses noisy broad-band in-focus observations. Results show that WaveDiff can model the PSFs' chromatic variations and handle super-resolution with high accuracy.}},
+	address = {Saclay, France},
+	author = {Liaudat, Tobias Ignacio},
+	date-added = {2023-10-06 15:09:53 +0100},
+	date-modified = {2023-10-06 15:09:53 +0100},
+	month = {October},
+	note = {2022UPASP118},
+	bibtex_show = {true},
+	pdf = {https://theses.hal.science/tel-03944690v1/document},
+	school = {Universit{\'e} Paris-Saclay},
+	title = {Data-driven modelling of ground-based and space-based telescope's point spread functions},
+	url = {http://www.theses.fr/2022UPASP118/document},
+	year = {2022},
+	bdsk-url-1 = {http://www.theses.fr/2022UPASP118/document}}
+
+@article{liaudat2023,
+	abstract = {In astronomy, upcoming space telescopes with wide-field optical instruments have a spatially varying point spread function (PSF). Specific scientific goals require a high-fidelity estimation of the PSF at target positions where no direct measurement of the PSF is provided. Even though observations of the PSF are available at some positions of the field of view (FOV), they are undersampled, noisy, and integrated into wavelength in the instrument's passband. PSF modeling represents a challenging ill-posed problem, as it requires building a model from these observations that can infer a super-resolved PSF at any wavelength and position in the FOV. Current data-driven PSF models can tackle spatial variations and super-resolution. However, they are not capable of capturing PSF chromatic variations. Our model, coined WaveDiff, proposes a paradigm shift in the data-driven modeling of the point spread function field of telescopes. We change the data-driven modeling space from the pixels to the wavefront by adding a differentiable optical forward model into the modeling framework. This change allows the transfer of a great deal of complexity from the instrumental response into the forward model. The proposed model relies on efficient automatic differentiation technology and modern stochastic first-order optimization techniques recently developed by the thriving machine-learning community. Our framework paves the way to building powerful, physically motivated models that do not require special calibration data. This paper demonstrates the WaveDiff model in a simplified setting of a space telescope. The proposed framework represents a performance breakthrough with respect to the existing state-of-the-art data-driven approach. The pixel reconstruction errors decrease six-fold at observation resolution and 44-fold for a 3x super-resolution. The ellipticity errors are reduced at least 20 times, and the size error is reduced more than 250 times. By only using noisy broad-band in-focus observations, we successfully capture the PSF chromatic variations due to diffraction. WaveDiff source code and examples associated with this paper are available at this link .},
+	author = {Tobias Liaudat and Jean-Luc Starck and Martin Kilbinger and Pierre-Antoine Frugier},
+	date-added = {2023-10-06 15:09:53 +0100},
+	date-modified = {2023-10-06 15:09:53 +0100},
+	doi = {10.1088/1361-6420/acb664},
+	journal = {Inverse Problems},
+	month = {feb},
+	number = {3},
+	pages = {035008},
+	publisher = {IOP Publishing},
+	code = {https://github.com/CosmoStat/wf-psf},
+	bibtex_show = {true},
+	arxiv = {2203.04908},
+	title = {Rethinking data-driven point spread function modeling with a differentiable optical model},
+	url = {https://dx.doi.org/10.1088/1361-6420/acb664},
+	volume = {39},
+	year = {2023},
+	bdsk-url-1 = {https://dx.doi.org/10.1088/1361-6420/acb664}}
