fixed markdown char conversion

--- a/_bibliography/talks_posters.bib
+++ b/_bibliography/talks_posters.bib
@@ -52,7 +52,7 @@
   journal = {Data-driven point spread function modelling of ground-based and space-based telescopes},
   year = {2022},
   month = {Oct},
-  slides = {https://drive.google.com/file/d/1eswILYeUdHv3coUf_vtp8Hvw7P2qxC--/view?usp=share_link},
+  slides = {https://drive.google.com/file/d/1eswILYeUdHv3coUf_vtp8Hvw7P2qxC{-}{-}/view?usp=share_link},
   }
 
 
