--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,7 @@
 	adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230700056M},
 	archiveprefix = {arXiv},
-	author = {{McEwen}, Jason D. and {Liaudat}, Tob{\'\i}as I. and {Price}, Matthew A. and {Cai}, Xiaohao and {Pereyra}, Marcelo},
+	author = {{McEwen}, Jason D. and {Liaudat}, Tobías I. and {Price}, Matthew A. and {Cai}, Xiaohao and {Pereyra}, Marcelo},
 	date-added = {2023-10-06 15:12:01 +0100},
 	date-modified = {2023-10-06 15:12:15 +0100},
 	doi = {10.48550/arXiv.2307.00056},
