add selected papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,6 +33,7 @@
 	primaryclass = {stat.ME},
 	title = {{Proximal nested sampling with data-driven priors for physical scientists}},
 	year = 2023,
+	selected={true},
 	bdsk-url-1 = {https://doi.org/10.48550/arXiv.2307.00056}}
 
 @article{liaudat2023_2,
@@ -56,6 +57,7 @@
 	primaryclass = {astro-ph.IM},
 	title = {{Point spread function modelling for astronomical telescopes: a review focused on weak gravitational lensing studies}},
 	year = 2023,
+	selected={true},
 	bdsk-url-1 = {https://doi.org/10.48550/arXiv.2306.07996}}
 
 @article{farrens2022,
@@ -246,4 +248,5 @@
 	url = {https://dx.doi.org/10.1088/1361-6420/acb664},
 	volume = {39},
 	year = {2023},
+	selected={true},
 	bdsk-url-1 = {https://dx.doi.org/10.1088/1361-6420/acb664}}
