update paper accepted in journal

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,27 +38,24 @@
 
 @article{liaudat2023_2,
 	abbr = {liaudat2023_2.png},
-	abstract = {{The accurate modelling of the Point Spread Function (PSF) is of paramount importance in astronomical observations, as it allows for the correction of distortions and blurring caused by the telescope and atmosphere. PSF modelling is crucial for accurately measuring celestial objects' properties. The last decades brought us a steady increase in the power and complexity of astronomical telescopes and instruments. Upcoming galaxy surveys like Euclid and LSST will observe an unprecedented amount and quality of data. Modelling the PSF for these new facilities and surveys requires novel modelling techniques that can cope with the ever-tightening error requirements. The purpose of this review is three-fold. First, we introduce the optical background required for a more physically-motivated PSF modelling and propose an observational model that can be reused for future developments. Second, we provide an overview of the different physical contributors of the PSF, including the optic- and detector-level contributors and the atmosphere. We expect that the overview will help better understand the modelled effects. Third, we discuss the different methods for PSF modelling from the parametric and non-parametric families for ground- and space-based telescopes, with their advantages and limitations. Validation methods for PSF models are then addressed, with several metrics related to weak lensing studies discussed in detail. Finally, we explore current challenges and future directions in PSF modelling for astronomical telescopes.}},
-	adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-	adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230607996L},
+	abstract = {{The accurate modelling of the point spread function (PSF) is of paramount importance in astronomical observations, as it allows for the correction of distortions and blurring caused by the telescope and atmosphere. PSF modelling is crucial for accurately measuring celestial objects' properties. The last decades have brought us a steady increase in the power and complexity of astronomical telescopes and instruments. Upcoming galaxy surveys like Euclid and Legacy Survey of Space and Time (LSST) will observe an unprecedented amount and quality of data. Modelling the PSF for these new facilities and surveys requires novel modelling techniques that can cope with the ever-tightening error requirements. The purpose of this review is threefold. Firstly, we introduce the optical background required for a more physically motivated PSF modelling and propose an observational model that can be reused for future developments. Secondly, we provide an overview of the different physical contributors of the PSF, which includes the optic- and detector-level contributors and atmosphere. We expect that the overview will help better understand the modelled effects. Thirdly, we discuss the different methods for PSF modelling from the parametric and non-parametric families for ground- and space-based telescopes, with their advantages and limitations. Validation methods for PSF models are then addressed, with several metrics related to weak-lensing studies discussed in detail. Finally, we explore current challenges and future directions in PSF modelling for astronomical telescopes.}},
 	archiveprefix = {arXiv},
 	author = {{Liaudat}, Tobias and {Starck}, Jean-Luc and {Kilbinger}, Martin},
 	arxiv = {2306.07996},
 	bibtex_show = {true},
-	date-added = {2023-10-06 15:12:01 +0100},
-	date-modified = {2023-10-06 15:12:25 +0100},
-	doi = {10.48550/arXiv.2306.07996},
-	eid = {arXiv:2306.07996},
-	eprint = {2306.07996},
-	journal = {arXiv e-prints},
-	keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics, Computer Science - Computer Vision and Pattern Recognition},
+	journal = {Frontiers in Astronomy and Space Sciences},
+	VOLUME = {10},
+	ISSN = {2296-987X},
+	DOI = {10.3389/fspas.2023.1158213},
+	pdf = {https://www.frontiersin.org/articles/10.3389/fspas.2023.1158213}, 
 	month = jun,
 	pages = {arXiv:2306.07996},
 	primaryclass = {astro-ph.IM},
 	title = {{Point spread function modelling for astronomical telescopes: a review focused on weak gravitational lensing studies}},
-	year = 2023,
+	year = {2023},
 	selected={true},
 	bdsk-url-1 = {https://doi.org/10.48550/arXiv.2306.07996}}
+
 
 @article{farrens2022,
 	abbr = {farrens2022.png},
