--- a/_bibliography/talks_posters.bib
+++ b/_bibliography/talks_posters.bib
@@ -4,6 +4,14 @@
 %% Options [title, journal, year, month, html, slides, poster, project]
 %% 
 
+@article{2023_11_workshop_poster_TL,
+  title = {Co-conception : capteurs hybrides et algorithmes pour des systèmes innovants, 2023, IHP, Paris, France},
+  journal = {Point spread function wavefront recovery: phase retrieval with automatic differentiation},
+  year = {2023},
+  month = {Nov},
+  poster = {https://drive.google.com/file/d/1WJ7qFlLHuAHlyDDU4vFAc-6MYIzsDMGA/view?usp=share_link},
+  }
+
 @article{2023_09_AIP_TL,
   title = {Applied Inverse Problems (AIP), 2023, Göttingen, Germany},
   journal = {Scalable Bayesian uncertainty quantification with learned convex regularisers for radio interferometric imaging},
